[metadata]
name = esp-docs
version = 2.1.1
author = Espressif
author_email = marius.vikhammer@espressif.com
description = Documentation building package used at Espressif
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/espressif/esp-docs
project_urls =
    Bug Tracker = https://github.com/espressif/esp-docs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    docutils<0.21
    cairosvg==2.5.1 # required by sphinxcontrib-svg2pdfconverter[CairoSVG]
    sphinx~=7.1.2
    breathe==4.35.0
    sphinx-copybutton==0.5.0
    sphinx-notfound-page
    seqdiag==3.0.0 # required if using blockdiag 3.0.0
    actdiag==3.0.0 # required if using blockdiag 3.0.0
    sphinxcontrib-blockdiag==3.0.0
    sphinxcontrib-seqdiag==3.0.0
    sphinxcontrib-actdiag==3.0.0
    sphinxcontrib-nwdiag==2.0.0
    sphinxcontrib-wavedrom>=3.0,<3.1
    sphinxcontrib-svg2pdfconverter[CairoSVG]==1.2.0
    nwdiag==2.0.0
    recommonmark
    sphinx_selective_exclude==1.0.3
    sphinx_idf_theme==2.0.1
    click==8.3.0
    PyYAML>=5.4
    tomli-w>=1.2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0

[options.entry_points]
console_scripts =
    build-docs = esp_docs.build_docs:main
    deploy-docs = esp_docs.deploy_docs:main
    docs-embed = esp_docs.esp_extensions.docs_embed.cli:main

[options.package_data]
* = fonts/*, latex_templates/*, idf_extensions/build_system/CMakeLists.txt, _static/*, vendor/**
